fixed collapsed navbar issue

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -118,7 +118,7 @@ hr {
 /* Position the content inside the overlay */
 .overlay-content {
   position: relative;
-  top: 25%; /* 25% from the top */
+  top: 10%; /* 25% from the top */
   width: 100%; /* 100% width */
   margin-top: 30px;
   display: flex;
@@ -129,10 +129,7 @@ hr {
 
 /* Position the close button (top right corner) */
 .overlay .closebtn {
-  position: absolute;
-  font-size: 40px;
-  top: 10px;
-  right: 8%;
+  font-size: 35px;
 }
 
 .overlay-content .nav-link {
@@ -185,10 +182,16 @@ hr {
 .nav-bar {
   height: 80px;
   width: 100vw;
+  max-height: 80px;
   align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.nav-bar .icon {
+  color: $dark-blue;
+  right: 30px;
 }
 
 .nav-link2 {
